[tool.poetry]
name = "3dtopia"
version = "0.1.0"
description = ""
authors = ["Eric Chen <eric.chen@backflip.ai>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
opencv-python = "^4.9.0.80"
torch = {url = "https://download.pytorch.org/whl/cu121/torch-2.1.1%2Bcu121-cp310-cp310-linux_x86_64.whl#sha256=ec76d11350c8e887a34d36602cd37f50639bc9cda9faea4d43f2070e9792e4a4"}
pymcubes = "^0.1.4"
trimesh = "^4.0.10"
tqdm = "^4.66.1"
lightning = "^2.1.3"
omegaconf = "^2.3.0"
einops = "^0.7.0"
wandb = "^0.16.2"
torchvision = "0.16.1"
transformers = "^4.37.1"
kornia = "^0.7.1"
open-clip-torch = "^2.24.0"
clip = { git = "https://github.com/openai/CLIP.git" }
imageio = {extras = ["pyav"], version = "^2.33.1"}
ffmpeg = "^1.4"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
